pages integration completed 4.0

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANVESHAN</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
+
 
 <body>
     <header>
@@ -29,10 +32,11 @@
                 <li><a href="Event.html">Events</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#blogs">Blogs</a></li>
-                <li><a href="#register">Register</a></li>
+                <li><a href="https://forms.gle/7YEtvRS3YeVEaDJaA">Register</a></li>
             </ul>
         </nav>
     </header>
+
 
     <section id="about" class="updates">
         <h2>UPDATES</h2>
@@ -44,13 +48,15 @@
                 <div class="text">Caption One</div>
             </div>
 
+
             <div class="mySlides fade">
                 <div class="numbertext"></div>
                 <img src="images/poster-2.png" alt="Image 2">
                 <div class="text">Caption Two</div>
             </div>
 
-            <!-- <div class="mySlides fade">
+            
+            <div class="mySlides fade">
                 <div class="numbertext"></div>
                 <img src="images/img3.jpg" alt="Image 3">
                 <div class="text">Caption Three</div>
@@ -68,6 +74,8 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+
+
     </section>
 
 
