--- a/Blog.html
+++ b/Blog.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
                 <a href="index.html">Home</a>
-                <a href="#">About</a>
+                <a href="AboutUs.html">About</a>
                 <a href="Event.html">Events</a>
                 <a href="Mentors.html">Mentors</a>
                 <a href="https://forms.gle/7YEtvRS3YeVEaDJaA">Register</a>
